updating the high score

--- a/Beat_The_Snake Game/index.html
+++ b/Beat_The_Snake Game/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    //updating the high score and storing it to the local memory 
     <div class="body">
         <div id="scoreBox">Score: 0</div>
         <div id="highscoreBox">HighScore: 0</div>
